2009-04-08 Pierre Wieser <pwieser@trychlos.org>

	* src/io-desktop/nadp-reader.c (item_from_desktop_path):
	First check Type for default value.

2009-04-07 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-gtk-utils.c:
	* src/nact/nact-gtk-utils.h
	(nact_gtk_utils_get_pixbuf): Render an icon for a given widget.
	(nact_utils_render): New function.

	* src/nact/nact-iaction-tab.c (on_icon_changed):
	* src/nact/nact-main-statusbar.c (nact_main_statusbar_set_locked):
	* src/nact/nact-tree-model.c (display_item): Updated accordingly.

2009-04-02 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac:
	* src/nact/nact-main-tab.c (nact_main_tab_is_page_enabled):
	GTK_WIDGET_IS_SENSITIVE is deprecated starting from gtk 2.20.

	* src/core/na-core-utils.c (na_core_utils_file_exists):
	* src/io-xml/naxml-writer.c (output_xml_to_file):
	Takes an URI as the filename.

2009-04-01 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-object-api.h (na_object_prepare_for_paste):
	* src/core/na-object-id.c (na_object_id_prepare_for_paste):
	Parent is not always an action, may be a menu.

	* src/io-desktop/nadp-desktop-file.c
	(nadp_desktop_file_get_file_type):
	Do not emit a warning if Type is not found in the .desktop file.

2009-03-28 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-data-boxed.h:
	* src/core/na-data-boxed.c (na_data_boxed_set_default): Removed function.

	* src/core/na-factory-object.c (set_defaults_iter):
	Only set a default value when the box has not been yet allocated.

2009-03-26 Pierre Wieser <pwieser@trychlos.org>

	Releasing 2.30.0.

2009-03-25 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-main-menubar-edit.c:
	* src/nact/nact-main-menubar-edit.h:
	* src/nact/nact-main-menubar-file.c:
	* src/nact/nact-main-menubar-file.h:
	* src/nact/nact-main-menubar-view.c:
	* src/nact/nact-main-menubar-view.h: New files.

	* po/POTFILES.in:
	* src/nact/Makefile.am: Updated accordingly.

	* src/nact/nact-main-window.c