@@ -1,5 +1,8 @@
 2009-04-08 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/plugin-menu/Makefile.am:
+	Rename plugin to libnautilus-actions-menu.
+
 	* src/io-desktop/nadp-reader.c (item_from_desktop_path):
 	First check Type for default value.
 
